[package]
name = "codewars_scraping"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
indicatif = "0.17.9"
playwright = "0.0.20"
regex = "1.11.1"
reqwest = { version = "0.12.10", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
spinners = "4.1.1"
tokio = { version = "1.42.0", features = ["full"] }
